# maui-clip

./: .gitignore  CMakeLists.txt  org.kde.clip.appdata.xml
android_files/: AndroidManifest.xml
po/ar/: clip.po
po/ca/: clip.po
po/ca@valencia/: clip.po
po/cs/: clip.po
po/de/: clip.po
po/en_GB/: clip.po
po/eo/: clip.po
po/es/: clip.po
po/eu/: clip.po
po/fi/: clip.po
po/fr/: clip.po
po/ga/: clip.po
po/gl/: clip.po
po/he/: clip.po
po/hu/: clip.po
po/it/: clip.po
po/ja/: clip.po
po/ka/: clip.po
po/ko/: clip.po
po/lt/: clip.po
po/lv/: clip.po
po/my/: clip.po
po/nl/: clip.po
po/nn/: clip.po
po/pa/: clip.po
po/pl/: clip.po
po/pt/: clip.po
po/pt_BR/: clip.po
po/sa/: clip.po
po/sk/: clip.po
po/sl/: clip.po
po/sv/: clip.po
po/tr/: clip.po
po/uk/: clip.po
po/zh_CN/: clip.po
po/zh_TW/: clip.po
src/: CMakeLists.txt  assets.qrc  main.cpp  main.qml  org.kde.clip.desktop  org.maui.clip.desktop  qml.qrc
src/android_files/: AndroidManifest.xml  build.gradle
src/android_files/src/org/maui/clip/: Solid.java
src/backends/mpv/: mpvobject.cpp  mpvobject.h  subtitlesfoldersmodel.cpp  subtitlesfoldersmodel.h  tracksmodel.cpp
src/controllers/: YouTube.qml  lockmanager.cpp  lockmanager.h  youtube.cpp  youtube.h
src/controllers/android/: androidlockbackend.cpp  androidlockbackend.h
src/controllers/linux/: solidlockbackend.cpp  solidlockbackend.h
src/models/: playlistmodel.h  tagsmodel.cpp  tagsmodel.h  videosmodel.cpp  videosmodel.h  youtubemodel.cpp  youtubemodel.h
src/utils/: clip.cpp  clip.h  thumbnailer.cpp  thumbnailer.h
src/utils/ffmpegthumbs/: filmstripfilter.cpp  moviedecoder.cpp  moviedecoder.h  videothumbnailer.h
src/views/: BrowserLayout.qml  FloatingVideo.qml  ItemMenu.qml  ListDelegate.qml  SelectionBar.qml
src/views/collection/: CollectionView.qml  PlacesSidebar.qml
src/views/player/: MPVPlayer.qml  Player.qml  PlayerView.qml  Playlist.qml
src/views/settings/: SettingsDialog.qml
src/views/tags/: TagsGrid.qml  TagsView.qml
src/views/youtube/: YouTubeView.qml
